tests/src/frontend/syntax/invalid/char_literal_too_long.sk
fun main(): String {
  'hi'.toString()
}
